p2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: apps1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service0
            port:
              number: 80
  - host: appss2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service1
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port:
              number: 80
